allignment issue on mobile view resolved

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .App {
     text-align: center;
     width: fit-content;
   }
-}
+} */
 
 .App-logo {
   height: 40vmin;
