--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -62,6 +62,7 @@
   background: #fff;
   margin: 15px auto 0;
   overflow-x: auto;
+  position: relative;
 }
 
 .wrapper1::-webkit-scrollbar{
